Added a footer + github link

--- a/src/index.html
+++ b/src/index.html
@@ -53,6 +53,20 @@
         <h3>Contact</h3>
     </div>
     
+<footer class="footer">
+    <span>&copy; Mitchell Caisse</span>
+    
+    <div id="footer-right" class="pull-right">
+        <ul>
+            <li>
+                <a href="https://github.com/mwcaisse" target="_blank">
+                    <i class="fa fa-github fa-2x"></i>
+                </a>
+            </li>
+        </ul>
+    </div>
+</footer>
+
 <script type="text/javascript" src="lib/bootstrap/js/bootstrap.min.js"></script>
 </body>
 
