Updated footer to be black

--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,7 @@
                 <a class="nav-link" href="#">Contact</a>
             </li>
         </ul>
+        <span>Hi</span>
     </nav>
   
     <div class="jumbotron about">
@@ -47,6 +48,8 @@
         <h3>Technical Skills</h3>
 
         <h3>Experience</h3>
+
+        <h3>Projects</h3>
 
         <h3>Education</h3>
 
