Populated technical skills section:

--- a/src/index.html
+++ b/src/index.html
@@ -41,19 +41,66 @@
 
 
     <div class="container">
-
-
-        <h3>About</h3>
-
         <h3>Technical Skills</h3>
+        
+        <div class="row">
+            <div class="col">
+                <h4>Languages</h4>
+                <ul>
+                    <li>Java</li>
+                    <li>C#</li>
+                    <li>JavaSCript</li>
+                    <li>C/C++</li>
+                    <li>SQL</li>
+                    <li>HTML</li>
+                </ul>
+            </div>
+            <div class="col">
+                <h4>Databases</h4>
+                <ul>
+                    <li>MariaDB</li>
+                    <li>MySQL</li>
+                    <li>Oracle</li>
+                    <li>SQL Server</li>
+                </ul>
+            </div>
+            <div class="col">
+                <h4>Tools</h4>
+                <ul>
+                    <li>Git</li>
+                    <li>TFS</li>
+                    <li>SVN</li>
+                    <li>Maven</li>
+                    <li>Jenkins</li>
+                    <li>Gradle</li>
+                </ul>
+            </div>
+            <div class="col">
+                <h4>Libraries</h4>
+                <ul>
+                    <li>Entity Framework</li>
+                    <li>MyBatis</li>
+                    <li>JPA</li>
+                    <li>Spring Framework</li>
+                    <li>Apache Solr</li>
+                    <li>Knockout</li>
+                    <li>Angular 2</li>
+                    <li>jQuery</li>
+                    <li>Bootstrap</li>
+                    <li>CSS</li>
+                </ul>
+            </div>
+            <div class="col">
+                <h4>Misc</h4>
+                <ul>
+                    <li>Sharepoint</li>
+                    <li>SSRS</li>
+                    <li>Unix/Linu</li>
+                    <li>Agile</li>
+                </ul>
+            </div>
+        </div>
 
-        <h3>Experience</h3>
-
-        <h3>Projects</h3>
-
-        <h3>Education</h3>
-
-        <h3>Contact</h3>
     </div>
     
 <footer class="footer">
