--- a/src/index.html
+++ b/src/index.html
@@ -95,7 +95,7 @@
                 <ul>
                     <li>Sharepoint</li>
                     <li>SSRS</li>
-                    <li>Unix/Linu</li>
+                    <li>Unix/Linux</li>
                     <li>Agile</li>
                 </ul>
             </div>
