Added some better styling to skills list

--- a/src/index.html
+++ b/src/index.html
@@ -44,18 +44,18 @@
         <h3>Technical Skills</h3>
         
         <div class="row">
-            <div class="col">
+            <div class="col skills-list">
                 <h4>Languages</h4>
                 <ul>
                     <li>Java</li>
                     <li>C#</li>
-                    <li>JavaSCript</li>
+                    <li>JavaScript</li>
                     <li>C/C++</li>
                     <li>SQL</li>
                     <li>HTML</li>
                 </ul>
             </div>
-            <div class="col">
+            <div class="col skills-list">
                 <h4>Databases</h4>
                 <ul>
                     <li>MariaDB</li>
@@ -64,7 +64,7 @@
                     <li>SQL Server</li>
                 </ul>
             </div>
-            <div class="col">
+            <div class="col skills-list">
                 <h4>Tools</h4>
                 <ul>
                     <li>Git</li>
@@ -75,7 +75,7 @@
                     <li>Gradle</li>
                 </ul>
             </div>
-            <div class="col">
+            <div class="col skills-list">
                 <h4>Libraries</h4>
                 <ul>
                     <li>Entity Framework</li>
@@ -90,7 +90,7 @@
                     <li>CSS</li>
                 </ul>
             </div>
-            <div class="col">
+            <div class="col skills-list">
                 <h4>Misc</h4>
                 <ul>
                     <li>Sharepoint</li>
