Added description to Raytheon

--- a/src/index.html
+++ b/src/index.html
@@ -115,7 +115,10 @@
                 <div class="card-block">
                     <h4 class="card-title">Raytheon Company</h4>
                     <h6 class="card-subtitle mb-2 text-muted">Software Developer</h6>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ultrices turpis non tortor tincidunt efficitur. Vivamus quis gravida lectus. Pellentesque at accumsan enim, vitae pellentesque nulla. Vivamus a laoreet lorem. Vestibulum sagittis suscipit finibus. Fusce consectetur diam odio, in congue nunc blandit at. Cras et nibh a nulla blandit lobortis. Fusce ac sollicitudin neque. Aliquam ullamcorper hendrerit dui, mollis vulputate sem vulputate at. Etiam vitae ex at elit venenatis ultricies. Quisque quis mi at nulla consequat congue. Etiam condimentum feugiat arcu, quis accumsan est tincidunt quis. Proin mauris nisi, posuere eu dui vel, commodo rutrum ante. Nulla facilisis congue dictum. </p>
+                    <p>Led the development of an enterprise application to improve import/export compliance. Played a key role in gathering requirements from customer and desgining solutions to meet the requirements. Faciliated the daily scrums.</p>
+                    <p>Developed a proof of concept application for indoor navigation using iBeans and Apache Cordova.</p>
+                    <p>Led the development of several smaller projects, including an application to help enforce safety through the use of a daily survey and a website to track project statuses and information hosted in Sharepoint.</p>
+                    <p><b>Related Skills:</b> C#, Java, HTML5, CSS, Bootstrap, Knockout, jQuery, SQLServer, SQL, Oracle, Jenkins, SSRS, SVN, TFS, Agile, Apache Cordova, Apache Solr, Spring </p>
                 </div>
             </div>
             
@@ -123,7 +126,8 @@
                 <div class="card-block">
                     <h4 class="card-title">NVIDIA</h4>
                     <h6 class="card-subtitle mb-2 text-muted">Mobile Intern</h6>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ultrices turpis non tortor tincidunt efficitur. Vivamus quis gravida lectus. Pellentesque at accumsan enim, vitae pellentesque nulla. Vivamus a laoreet lorem. Vestibulum sagittis suscipit finibus. Fusce consectetur diam odio, in congue nunc blandit at. Cras et nibh a nulla blandit lobortis. Fusce ac sollicitudin neque. Aliquam ullamcorper hendrerit dui, mollis vulputate sem vulputate at. Etiam vitae ex at elit venenatis ultricies. Quisque quis mi at nulla consequat congue. Etiam condimentum feugiat arcu, quis accumsan est tincidunt quis. Proin mauris nisi, posuere eu dui vel, commodo rutrum ante. Nulla facilisis congue dictum. </p>
+                    <p>Worked with the Linux 4 Tegra team to port different versions of Linux to the Jetson TK1 development board. Created documentation of the process.</p>
+                    <p><b>Related Skills:</b> Linux, Shell Scripting</p>
                 </div>
             </div>
             
