--- a/src/index.html
+++ b/src/index.html
@@ -116,8 +116,8 @@
                     <h4 class="card-title">Raytheon Company</h4>
                     <h6 class="card-subtitle mb-2 text-muted">Software Developer</h6>
                     <p>Led the development of an enterprise application to improve import/export compliance. Played a key role in gathering requirements from customer and desgining solutions to meet the requirements. Faciliated the daily scrums.</p>
+                    <p>Contributed to process improvement efforts, including automating our build process and downselecting static code analysis tools.</p>
                     <p>Developed a proof of concept application for indoor navigation using iBeans and Apache Cordova.</p>
-                    <p>Led the development of several smaller projects, including an application to help enforce safety through the use of a daily survey and a website to track project statuses and information hosted in Sharepoint.</p>
                     <p><b>Related Skills:</b> C#, Java, HTML5, CSS, Bootstrap, Knockout, jQuery, SQLServer, SQL, Oracle, Jenkins, SSRS, SVN, TFS, Agile, Apache Cordova, Apache Solr, Spring </p>
                 </div>
             </div>
@@ -135,7 +135,8 @@
                 <div class="card-block">
                     <h4 class="card-title">Raytheon Company</h4>
                     <h6 class="card-subtitle mb-2 text-muted">Software Developer, Intern</h6>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ultrices turpis non tortor tincidunt efficitur. Vivamus quis gravida lectus. Pellentesque at accumsan enim, vitae pellentesque nulla. Vivamus a laoreet lorem. Vestibulum sagittis suscipit finibus. Fusce consectetur diam odio, in congue nunc blandit at. Cras et nibh a nulla blandit lobortis. Fusce ac sollicitudin neque. Aliquam ullamcorper hendrerit dui, mollis vulputate sem vulputate at. Etiam vitae ex at elit venenatis ultricies. Quisque quis mi at nulla consequat congue. Etiam condimentum feugiat arcu, quis accumsan est tincidunt quis. Proin mauris nisi, posuere eu dui vel, commodo rutrum ante. Nulla facilisis congue dictum. </p>
+                    <p>Implemented a web-based application designed to increase safety and compliance on the manufacturing floor through the user of a daily survey.</p>
+                    <p><b>Related Skills:</b> C#, Knockout, HTML, CSS, jQuery, SSRS, SQLServer, TFS </p>
                 </div>
             </div>
             
@@ -143,15 +144,17 @@
                 <div class="card-block">
                     <h4 class="card-title">Fidelity Investments</h4>
                     <h6 class="card-subtitle mb-2 text-muted">Software Developer, Intern</h6>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ultrices turpis non tortor tincidunt efficitur. Vivamus quis gravida lectus. Pellentesque at accumsan enim, vitae pellentesque nulla. Vivamus a laoreet lorem. Vestibulum sagittis suscipit finibus. Fusce consectetur diam odio, in congue nunc blandit at. Cras et nibh a nulla blandit lobortis. Fusce ac sollicitudin neque. Aliquam ullamcorper hendrerit dui, mollis vulputate sem vulputate at. Etiam vitae ex at elit venenatis ultricies. Quisque quis mi at nulla consequat congue. Etiam condimentum feugiat arcu, quis accumsan est tincidunt quis. Proin mauris nisi, posuere eu dui vel, commodo rutrum ante. Nulla facilisis congue dictum. </p>
-                </div>
+                    <p>Automated the deployments of muliple projects by creating an application that is easily configurable to specify deployment targets and methods</p>
+                    <p>Mentoed a fellow intern through the creation on a web based application and backend service to manage finacial information.</p>
+                    <p><b>Related Skills:</b> Java, Oracle, jQuery, HTML, CSS, JMS, Apache Camel</p>
+            </div>
             </div>
             
             <div class="card">
                 <div class="card-block">
                     <h4 class="card-title">Worcester Polytechnic Institute</h4>
                     <h6 class="card-subtitle mb-2 text-muted">Helpdesk Specialist</h6>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ultrices turpis non tortor tincidunt efficitur. Vivamus quis gravida lectus. Pellentesque at accumsan enim, vitae pellentesque nulla. Vivamus a laoreet lorem. Vestibulum sagittis suscipit finibus. Fusce consectetur diam odio, in congue nunc blandit at. Cras et nibh a nulla blandit lobortis. Fusce ac sollicitudin neque. Aliquam ullamcorper hendrerit dui, mollis vulputate sem vulputate at. Etiam vitae ex at elit venenatis ultricies. Quisque quis mi at nulla consequat congue. Etiam condimentum feugiat arcu, quis accumsan est tincidunt quis. Proin mauris nisi, posuere eu dui vel, commodo rutrum ante. Nulla facilisis congue dictum. </p>
+                    <p>Provided email, phone, and in person support for IT related issues for WPI students, faculty, and staff.</p>
                 </div>
             </div>
 
