Added the about section to a container

--- a/src/index.html
+++ b/src/index.html
@@ -35,12 +35,14 @@
         <span>Hi</span>
     </nav>
   
-    <div class="jumbotron about">
+<div class="jumbotron about">
+    <div class="container">
         <div class="about-content">
             <h1>Hello World</h1>
             <p>This is some awesome text that is just giong to here.</p>
         </div>
     </div>
+</div>
 
     <!-- Start of Technical Skills Div-->
     <div id="skills" class="container">
