--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
     <nav class="navbar navbar-toggleable-md navbar-inverse bg-inverse">
         <ul class="nav nav-pills float-right">
             <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
+                <a class="nav-link" href="#about">About</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#skills">Technical Skills</a>
@@ -35,9 +35,9 @@
         <span>Hi</span>
     </nav>
   
-<div class="jumbotron about">
+<div id="about" class="jumbotron about">
     <div class="container">
-        <div class="about-content">
+        <div>
             <h1>Hello World</h1>
             <p>This is some awesome text that is just giong to here.</p>
         </div>
