--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,7 @@
 
     <!-- Start of Technical Skills Div-->
     <div id="skills" class="container">
-        <h3>Technical Skills</h3>
+        <h3 class="skills-header">Technical Skills</h3>
         
         <div class="row">
             <div class="col skills-list">
