Added the name section

--- a/src/index.html
+++ b/src/index.html
@@ -35,11 +35,10 @@
     </nav>
   
 <div id="about" class="jumbotron about">
-    <div class="container">
-        <div>
-            <h1>Hello World</h1>
-            <p>This is some awesome text that is just giong to here.</p>
-        </div>
+    <div class="about-content">
+        <h1>Mitchell Caisse</h1>
+        <h2>Software Engineer</h2>
+        <a class="btn-resume btn btn-outline-secondary" href="#">Download Resume</a>
     </div>
 </div>
 
