Renamed about section/styling to name

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
     <nav class="navbar navbar-toggleable-md navbar-inverse bg-inverse">
         <ul class="nav nav-pills float-right">
             <li class="nav-item">
-                <a class="nav-link" href="#about">About</a>
+                <a class="nav-link" href="#name">About</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#skills">Technical Skills</a>
@@ -34,8 +34,8 @@
         </ul>
     </nav>
   
-<div id="about" class="jumbotron about">
-    <div class="about-content">
+<div id="name" class="jumbotron name">
+    <div class="name-content">
         <h1>Mitchell Caisse</h1>
         <h2>Software Engineer</h2>
         <a class="btn-resume btn btn-outline-secondary" href="#">Download Resume</a>
