--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
     <nav class="navbar navbar-toggleable-md navbar-inverse bg-inverse">
         <ul class="nav nav-pills float-right">
             <li class="nav-item">
-                <a class="nav-link" href="#name">About</a>
+                <a class="nav-link" href="#about">About</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#skills">Technical Skills</a>
