--- a/src/index.html
+++ b/src/index.html
@@ -232,6 +232,33 @@
     <div id="projects" class="container">
         <h3>Projects</h3>
         <p>Here be where I will put some details about various projects.</p>
+        
+        <div class="row">
+            <div class="col">
+                <div class="card">
+                    <img class="card-img-top" src="img/project_thumb.png"/>
+                    <div class="card-block">
+                        CarTracker
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card">
+                    <img class="card-img-top" src="img/project_thumb.png"/>
+                    <div class="card-block">
+                        ShowReminder
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card">
+                    <img class="card-img-top" src="img/project_thumb.png"/>
+                    <div class="card-block">
+                        MirrorMirror
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     <!-- End of Projects Div-->
     
