--- a/src/index.html
+++ b/src/index.html
@@ -233,7 +233,7 @@
         <h3>Projects</h3>
         <p>Here be where I will put some details about various projects.</p>
         
-        <div class="row">
+        <div class="row project-row ">
             <div class="col">
                 <div class="card">
                     <img class="card-img-top" src="img/project_thumb.png"/>
@@ -255,6 +255,16 @@
                     <img class="card-img-top" src="img/project_thumb.png"/>
                     <div class="card-block">
                         MirrorMirror
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row project-row">
+            <div class="col-4">
+                <div class="card">
+                    <img class="card-img-top" src="img/project_thumb.png" />
+                    <div class="card-block">
+                        mwcaisse.com
                     </div>
                 </div>
             </div>
