Updating the styling of dates on experience section

--- a/src/index.html
+++ b/src/index.html
@@ -122,13 +122,13 @@
         <div class="container">
             <h3>Experience</h3>
             <div class="row">
-                <div class="col-4">
-                    <div class="timeline-icon">
+                <div class="col-3 align-self-center">
+                    <div class="timeline-icon left">
                         <i class="fa fa-map-marker fa-2x"></i>
                     </div>
-                    <div class="timeline-text">May 2015 - Present</div>
+                    <div class="timeline-text left">May 2015 - Present</div>
                 </div>
-                <div class="col-8">
+                <div class="col-9">
                     <div class="card experience-card">
                         <div class="card-block">
                             <h4 class="card-title">Raytheon Company</h4>
@@ -145,13 +145,7 @@
             </div>
             
             <div class="row">
-                <div class="col-4">
-                    <div class="timeline-icon">
-                        <i class="fa fa-map-marker fa-2x"></i>
-                    </div>
-                    <div class="timeline-text">March 2015 - May 2015</div>
-                </div>
-                <div class="col-8">
+                <div class="col-9">
                     <div class="card experience-card">
                         <div class="card-block">
                             <h4 class="card-title">NVIDIA</h4>
@@ -163,15 +157,21 @@
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-4">
-                    <div class="timeline-icon">
+                <div class="col-3 align-self-center">
+                    <div class="timeline-icon right">
                         <i class="fa fa-map-marker fa-2x"></i>
                     </div>
-                    <div class="timeline-text">May 2014 - March 2015</div>
+                    <div class="timeline-text right">March 2015 - May 2015</div>
                 </div>
-                <div class="col-8">
+            </div>
+            <div class="row">
+                <div class="col-3 align-self-center">
+                    <div class="timeline-icon left">
+                        <i class="fa fa-map-marker fa-2x"></i>
+                    </div>
+                    <div class="timeline-text left">May 2014 - March 2015</div>
+                </div>
+                <div class="col-9">
                     <div class="card experience-card">
                         <div class="card-block">
                             <h4 class="card-title">Raytheon Company</h4>
@@ -185,13 +185,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-4">
-                    <div class="timeline-icon">
-                        <i class="fa fa-map-marker fa-2x"></i>
-                    </div>
-                    <div class="timeline-text">May 2013 - August 2013 <br/> May 2012 - August 2012</div>
-                </div>
-                <div class="col-8">
+                <div class="col-9">
                     <div class="card experience-card">
                         <div class="card-block">
                             <h4 class="card-title">Fidelity Investments</h4>
@@ -204,15 +198,21 @@
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-4">
-                    <div class="timeline-icon">
+                <div class="col-3 align-self-center">
+                    <div class="timeline-icon right">
                         <i class="fa fa-map-marker fa-2x"></i>
                     </div>
-                    <div class="timeline-text">September 2012 - May 2014</div>
+                    <div class="timeline-text right double">May 2013 - August 2013 <br/> May 2012 - August 2012</div>
                 </div>
-                <div class="col-8">
+            </div>
+            <div class="row">
+                <div class="col-3 align-self-center">
+                    <div class="timeline-icon left">
+                        <i class="fa fa-map-marker fa-2x"></i>
+                    </div>
+                    <div class="timeline-text left">Sept 2012 - May 2014</div>
+                </div>
+                <div class="col-9">
                     <div class="card experience-card">
                         <div class="card-block">
                             <h4 class="card-title">Worcester Polytechnic Institute</h4>
