Added more spacing between experience rows. Updated project row styling to not use its own class

--- a/src/index.html
+++ b/src/index.html
@@ -233,7 +233,7 @@
         <h3>Projects</h3>
         <p>Here be where I will put some details about various projects.</p>
         
-        <div class="row project-row ">
+        <div class="row">
             <div class="col">
                 <div class="card">
                     <img class="card-img-top" src="img/project_thumb.png"/>
@@ -259,7 +259,7 @@
                 </div>
             </div>
         </div>
-        <div class="row project-row">
+        <div class="row">
             <div class="col-4">
                 <div class="card">
                     <img class="card-img-top" src="img/project_thumb.png" />
