Added hover over effect for projects

--- a/src/index.html
+++ b/src/index.html
@@ -234,27 +234,36 @@
         <p>Here be where I will put some details about various projects.</p>
         
         <div class="row">
-            <div class="col">
+            <div class="col-4">
                 <div class="card">
                     <img class="card-img-top" src="img/project_thumb.png"/>
-                    <div class="card-block">
-                        CarTracker
+                    <div class="project-info">
+                        <span class="project-text">
+                            <h3>CarTracker</h3>
+                            <h5>Web Application</h5>
+                        </span>
                     </div>
                 </div>
             </div>
-            <div class="col">
+            <div class="col-4">
                 <div class="card">
                     <img class="card-img-top" src="img/project_thumb.png"/>
-                    <div class="card-block">
-                        ShowReminder
+                    <div class="project-info">
+                        <span class="project-text">
+                            <h3>ShowReminder</h3>
+                            <h5>Web Application</h5>
+                        </span>
                     </div>
                 </div>
             </div>
-            <div class="col">
+            <div class="col-4">
                 <div class="card">
                     <img class="card-img-top" src="img/project_thumb.png"/>
-                    <div class="card-block">
-                        MirrorMirror
+                    <div class="project-info">
+                        <span class="project-text">
+                            <h3>MirrorMirror</h3>
+                            <h5>Web Application</h5>
+                        </span>
                     </div>
                 </div>
             </div>
@@ -262,10 +271,13 @@
         <div class="row">
             <div class="col-4">
                 <div class="card">
-                    <img class="card-img-top" src="img/project_thumb.png" />
-                    <div class="card-block">
-                        mwcaisse.com
-                    </div>
+                    <img class="card-img-top" src="img/project_thumbs/mwcaisse.jpg" />
+                </div>
+                <div class="project-info">
+                    <span class="project-text">
+                        <h3>mwcaisse.com</h3>
+                        <h5>Web Design</h5>
+                    </span>
                 </div>
             </div>
         </div>
