Added thumbnail for cartracker

--- a/src/index.html
+++ b/src/index.html
@@ -236,7 +236,7 @@
         <div class="row">
             <div class="col-4">
                 <div class="card">
-                    <img class="card-img-top" src="img/project_thumb.png"/>
+                    <img class="card-img-top" src="img/project_thumbs/cartracker.jpg"/>
                     <div class="project-info">
                         <span class="project-text">
                             <h3>CarTracker</h3>
@@ -277,6 +277,17 @@
                     <span class="project-text">
                         <h3>mwcaisse.com</h3>
                         <h5>Web Design</h5>
+                    </span>
+                </div>
+            </div>
+            <div class="col-4">
+                <div class="card">
+                    <img class="card-img-top" src="img/project_thumbs/mwcaisse.jpg" />
+                </div>
+                <div class="project-info">
+                    <span class="project-text">
+                        <h3>PushFile</h3>
+                        <h5>Web Application</h5>
                     </span>
                 </div>
             </div>
