Added show remidner thumbnail

--- a/src/index.html
+++ b/src/index.html
@@ -247,7 +247,7 @@
             </div>
             <div class="col-4">
                 <div class="card">
-                    <img class="card-img-top" src="img/project_thumb.png"/>
+                    <img class="card-img-top" src="img/project_thumbs/showreminder.jpg"/>
                 </div>
                 <div class="project-info">
                     <span class="project-text">
