Added push file thumbnail

--- a/src/index.html
+++ b/src/index.html
@@ -241,7 +241,7 @@
                 <div class="project-info">
                     <span class="project-text">
                         <h3>CarTracker</h3>
-                        <h5>Web Application</h5>
+                        <h5>Web + Android Application</h5>
                     </span>
                 </div>
             </div>
@@ -282,12 +282,12 @@
             </div>
             <div class="col-4">
                 <div class="card">
-                    <img class="card-img-top" src="img/project_thumbs/mwcaisse.jpg" />
+                    <img class="card-img-top" src="img/project_thumbs/pushfile.jpg" />
                 </div>
                 <div class="project-info">
                     <span class="project-text">
                         <h3>PushFile</h3>
-                        <h5>Web Application</h5>
+                        <h5>Web + Android Application</h5>
                     </span>
                 </div>
             </div>
