Updated page title

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="lib/font-awesome/css/font-awesome.min.css"/>
     <link rel="stylesheet" href="css/styles.css" />
 
-    <title>Mitchell Caisse - Software Developer</title>
+    <title>Mitchell Caisse - Software Engineer</title>
 </head>
 
 <body>
