--- a/src/index.html
+++ b/src/index.html
@@ -238,34 +238,40 @@
                 <div class="card">
                     <img class="card-img-top" src="img/project_thumbs/cartracker.jpg"/>
                 </div>
-                <div class="project-info">
-                    <span class="project-text">
-                        <h3>CarTracker</h3>
-                        <h5>Web + Android Application</h5>
-                    </span>
-                </div>
+                <a href="project.html">
+                    <div class="project-info">
+                        <span class="project-text">
+                            <h3>CarTracker</h3>
+                            <h5>Web + Android Application</h5>
+                        </span>
+                    </div>
+                 </a>
             </div>
             <div class="col-4">
                 <div class="card">
                     <img class="card-img-top" src="img/project_thumbs/showreminder.jpg"/>
                 </div>
-                <div class="project-info">
-                    <span class="project-text">
-                        <h3>ShowReminder</h3>
-                        <h5>Web Application</h5>
-                    </span>
-                </div>
+                <a href="project.html">
+                    <div class="project-info">
+                        <span class="project-text">
+                            <h3>ShowReminder</h3>
+                            <h5>Web Application</h5>
+                        </span>
+                    </div>
+                </a>
             </div>
             <div class="col-4">
                 <div class="card">
                     <img class="card-img-top" src="img/project_thumbs/mirrormirror.jpg">
                 </div>
-                <div class="project-info">
-                    <span class="project-text">
-                        <h3>MirrorMirror</h3>
-                        <h5>Web Application</h5>
-                    </span>
-                </div>
+                <a href="project.html">
+                    <div class="project-info">
+                        <span class="project-text">
+                            <h3>MirrorMirror</h3>
+                            <h5>Web Application</h5>
+                        </span>
+                    </div>
+                </a>
             </div>
         </div>
         <div class="row">
@@ -273,23 +279,27 @@
                 <div class="card">
                     <img class="card-img-top" src="img/project_thumbs/mwcaisse.jpg" />
                 </div>
-                <div class="project-info">
-                    <span class="project-text">
-                        <h3>mwcaisse.com</h3>
-                        <h5>Web Design</h5>
-                    </span>
-                </div>
+                <a href="project.html">
+                    <div class="project-info">
+                        <span class="project-text">
+                            <h3>mwcaisse.com</h3>
+                            <h5>Web Design</h5>
+                        </span>
+                    </div>
+                </a>
             </div>
             <div class="col-4">
                 <div class="card">
                     <img class="card-img-top" src="img/project_thumbs/pushfile.jpg" />
                 </div>
-                <div class="project-info">
-                    <span class="project-text">
-                        <h3>PushFile</h3>
-                        <h5>Web + Android Application</h5>
-                    </span>
-                </div>
+                <a href="project.html">
+                    <div class="project-info">
+                        <span class="project-text">
+                            <h3>PushFile</h3>
+                            <h5>Web + Android Application</h5>
+                        </span>
+                    </div>
+                </a>
             </div>
         </div>
     </div>
