Added some images to car tracker

--- a/src/project.html
+++ b/src/project.html
@@ -69,6 +69,18 @@
 
         </div>
     </div>
+    
+    <div class="project-images">
+        <div class="row">
+            <img src="img/projects/cartracker/cartracker_1.PNG" />
+        </div>
+        <div class="row">
+            <img src="img/projects/cartracker/cartracker_2.PNG" />
+        </div>
+        <div class="row">
+            <img src="img/projects/cartracker/cartracker_3.PNG" />
+        </div>
+    </div>
 
     <footer class="footer">
         <span>&copy; Mitchell Caisse</span>
