--- a/src/project.html
+++ b/src/project.html
@@ -72,13 +72,13 @@
     
     <div class="project-images">
         <div class="row">
-            <img src="img/projects/cartracker/cartracker_1.PNG" />
+            <img src="img/projects/cartracker/cartracker_1.png" />
         </div>
         <div class="row">
-            <img src="img/projects/cartracker/cartracker_2.PNG" />
+            <img src="img/projects/cartracker/cartracker_2.png" />
         </div>
         <div class="row">
-            <img src="img/projects/cartracker/cartracker_3.PNG" />
+            <img src="img/projects/cartracker/cartracker_3.png" />
         </div>
     </div>
 
