removed blue line

--- a/src/project.html
+++ b/src/project.html
@@ -58,7 +58,7 @@
                     The Web Application which collects the information from the Android app performs analysis and presents it to the user in an easy to read and understand format.
                 </p>
                 
-                <p>To keep things simgple and allow easy code re-use between the Android application and Web app both were written in Java.</p>
+                <p>To keep things simple and allow easy code re-use between the Android application and Web app both were written in Java.</p>
                 
                 <p>The webapplication utilizes Spring Framework for hanlding dependency injection, the RESTFul API, serving WebPages using Thymeleaf as a templating engine, and to secure the application. MyBatis was used to provide a simple Data Access Layer between the application and its database.</p>
                 <p>On the android side <a href="https://github.com/pires/obd-java-api" target="_blank">piers odb-java-api</a> is used to communicate with the vehicle. Spring RestTemplate is used to consume the RESTFul api exposed by the web application.</p>
